# mirante4d

./: .gitignore  .rumdl.toml  AGENTS.md  ASSET_PROVENANCE.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  kittest.toml
crates/mirante4d-analysis/: Cargo.toml
crates/mirante4d-analysis-core/: Cargo.toml
crates/mirante4d-analysis-core/src/: artifact.rs  lib.rs  plan.rs  reduce.rs  tests.rs
crates/mirante4d-analysis-runtime/: Cargo.toml
crates/mirante4d-analysis-runtime/src/: lib.rs  tests.rs
crates/mirante4d-analysis/src/: lib.rs  operations.rs  results.rs  scene_artifacts.rs  tests.rs
crates/mirante4d-app/: Cargo.toml
crates/mirante4d-app/src/: analysis_jobs.rs  analysis_product.rs  analysis_session.rs  analysis_workspace.rs  brick_streaming.rs  brick_streaming_plan.rs  commands.rs  cross_section_read_queue.rs  cross_section_readout.rs  cross_section_runtime.rs  cross_section_scheduler.rs  cross_section_streaming.rs  current_egui_shell_bridge.rs  current_project_persistence_bridge.rs  current_settings_connection.rs  current_source_open_service.rs  current_source_verification_service.rs  dataset_demand_plan.rs  dataset_opening.rs  dataset_requests.rs  diagnostics.rs  display_graph.rs  display_identity.rs  display_refresh.rs  fidelity.rs  histogram.rs  image_compositing.rs  import_ui.rs  import_worker_service.rs  import_workflow.rs  layer_state.rs  lib.rs  lod_scheduler.rs  main.rs  native_presentation.rs  playback.rs  preferences.rs  product_automation.rs  product_render_intent.rs  project_session.rs  (+27 more)
crates/mirante4d-app/src/current_runtime/: analysis.rs  dataset.rs  import.rs  mod.rs  project.rs  render.rs  ui.rs  validation.rs
crates/mirante4d-app/src/product_automation/: capture.rs  diagnostics.rs  model.rs  picking.rs  tests.rs  timing.rs
crates/mirante4d-app/src/resident_rendering/: dvr.rs
crates/mirante4d-app/src/tests/: analysis_workspace.rs  channels_project.rs  fidelity_shell.rs  import_render_viewport.rs  scene_tools.rs  streaming_lod.rs  unified_runtime.rs
crates/mirante4d-application/: Cargo.toml
crates/mirante4d-application/src/: analysis_workspace.rs  histogram.rs  import_workflow.rs  lib.rs  project_store_service.rs  render_coordination.rs  tests.rs  viewer_tools.rs  viewport_interaction.rs
crates/mirante4d-application/tests/support/: project_store_service.rs
crates/mirante4d-core/: Cargo.toml
crates/mirante4d-core/benches/: core_primitives.rs
crates/mirante4d-core/src/: axis.rs  camera.rs  display.rs  dtype.rs  ids.rs  iso_light.rs  lib.rs  shape.rs  space.rs
crates/mirante4d-data/: Cargo.toml
crates/mirante4d-data/src/: current_source_bridge.rs  current_source_verification.rs  error.rs  lib.rs  payloads.rs  regions.rs  runtime_config.rs  runtime_support.rs  sharded_bricks.rs  tests.rs  types.rs  worker.rs
crates/mirante4d-data/src/worker/: tests.rs
crates/mirante4d-dataset-runtime/: Cargo.toml
crates/mirante4d-dataset-runtime/src/: ledger.rs  lib.rs  production.rs
crates/mirante4d-format/: Cargo.toml
crates/mirante4d-format/src/: current_profile.rs  fixture.rs  lib.rs  manifest.rs  manifest_wire.rs  multiscale.rs  validate.rs  writer.rs  zarr_io.rs
crates/mirante4d-format/src/writer/: brick_records.rs  dense.rs  models.rs  package.rs  statistics.rs  streaming.rs  (+3 more)
crates/mirante4d-identity/: Cargo.toml
crates/mirante4d-identity/src/: artifact.rs  canonical.rs  digest.rs  exact.rs  hash.rs  lib.rs  object.rs  scientific.rs
crates/mirante4d-import/: Cargo.toml
crates/mirante4d-import-pipeline/: Cargo.toml
crates/mirante4d-import-pipeline/src/: cancel.rs  chunk.rs  error.rs  lib.rs  model.rs  package.rs  pipeline.rs  plan.rs  publish.rs  pyramid.rs  source.rs  spool.rs  worker.rs
crates/mirante4d-import-pipeline/tests/: import_pipeline.rs
crates/mirante4d-import/src/: commit.rs  decode.rs  discover.rs  execute.rs  lib.rs  models.rs  multiscale.rs  review.rs  tests.rs
crates/mirante4d-project-model/: Cargo.toml
crates/mirante4d-project-model/src/: lib.rs  tests.rs
crates/mirante4d-project-store/: Cargo.toml
crates/mirante4d-project-store/src/: actor.rs  api.rs  filesystem.rs  full_verify.rs  generation.rs  hostile_tests.rs  inspection.rs  lease.rs  lib.rs  local.rs  pin.rs  transaction.rs  transition.rs  trash.rs  wire.rs
crates/mirante4d-render-reference/: Cargo.toml
crates/mirante4d-render-reference/src/: lib.rs
crates/mirante4d-render-wgpu/: Cargo.toml
crates/mirante4d-render-wgpu/src/: gpu_tests.rs  lib.rs  runtime.rs  shader.wgsl
crates/mirante4d-renderer/: Cargo.toml
crates/mirante4d-renderer/src/: brick_plan.rs  brick_render.rs  camera_mip.rs  cpu.rs  cross_section.rs  current_camera.rs  current_lease_bridge.rs  diagnostics.rs  lib.rs  resources.rs  scene.rs  scene_render.rs  transfer.rs  transform.rs
crates/mirante4d-storage/: Cargo.toml
crates/mirante4d-storage/src/: brick_address.rs  dataset_source.rs  directory_inventory.rs  error.rs  lib.rs  limits.rs  local_publication.rs  ome_metadata.rs  package_admission.rs  package_catalog.rs  package_integrity.rs  package_read.rs  package_science.rs  package_structure.rs  package_write.rs  packed_index.rs  paths.rs  profile.rs  range_io.rs  shard.rs  zarr_metadata.rs
crates/mirante4d-storage/tests/: target_conformance.rs  target_mutation_conformance.rs  target_writer_conformance.rs
crates/mirante4d-ui-egui/: Cargo.toml
crates/mirante4d-ui-egui/src/: analysis_workspace.rs  fidelity.rs  lib.rs  project_dialogs.rs  runtime_diagnostics.rs  workbench.rs  workbench_chrome.rs  workbench_inspector.rs  workbench_viewer.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: arch.rs  baseline_audit.rs  baseline_promote.rs  command_audit.rs  completion_waiver.rs  deps.rs  dev.rs  documentation.rs  external_ci_evidence.rs  fixtures.rs  host.rs  ids.rs  main.rs  neuroglancer_compare.rs  package.rs  process.rs  product_validate.rs  report_audit.rs  reports.rs  smoke.rs  target_fixture.rs  verify.rs  workflow_audit.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: manifest_parser.rs  project_metadata_parser.rs
(+302 files in other folders)
