[workspace]
members = [
    "crates/mirante4d-analysis",
    "crates/mirante4d-app",
    "crates/mirante4d-application",
    "crates/mirante4d-data",
    "crates/mirante4d-dataset",
    "crates/mirante4d-domain",
    "crates/mirante4d-format",
    "crates/mirante4d-identity",
    "crates/mirante4d-import",
    "crates/mirante4d-project-model",
    "crates/mirante4d-render-api",
    "crates/mirante4d-renderer",
    "crates/mirante4d-settings",
    "crates/xtask",
]
exclude = ["fuzz", "vendor/wayland-scanner"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/kirchhausenlab/mirante4d"

[workspace.dependencies]
anyhow = "1.0.103"
approx = "0.5.1"
blake3 = "1.8.2"
bytemuck = "1.25.0"
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "default_fonts", "wayland", "web_screen_reader", "wgpu", "x11"] }
egui_kittest = { version = "0.34.3", default-features = false }
glam = { version = "0.30.9", features = ["serde"] }
insta = { version = "1.48.0", default-features = false }
ndarray = "0.16.1"
pollster = "0.4.0"
proptest = "1.11.0"
quick-xml = "0.41.0"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0.117", features = ["full", "visit"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tiff = "0.11.3"
toml = { version = "1.1.2", default-features = false, features = ["std", "serde", "parse"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.3", features = ["v4"] }
wgpu = "29.0.3"
winit = { version = "0.30.13", default-features = false, features = ["wayland-csd-adwaita-notitle", "wayland-dlopen"] }
yaml-rust2 = "0.11.0"
zarrs = { version = "0.23.13", default-features = false, features = ["crc32c", "filesystem", "ndarray", "sharding", "zstd"] }

mirante4d-app = { path = "crates/mirante4d-app" }
mirante4d-analysis = { path = "crates/mirante4d-analysis" }
mirante4d-application = { path = "crates/mirante4d-application" }
mirante4d-data = { path = "crates/mirante4d-data" }
mirante4d-dataset = { path = "crates/mirante4d-dataset" }
mirante4d-domain = { path = "crates/mirante4d-domain" }
mirante4d-format = { path = "crates/mirante4d-format" }
mirante4d-identity = { path = "crates/mirante4d-identity" }
mirante4d-import = { path = "crates/mirante4d-import" }
mirante4d-project-model = { path = "crates/mirante4d-project-model" }
mirante4d-render-api = { path = "crates/mirante4d-render-api" }
mirante4d-renderer = { path = "crates/mirante4d-renderer" }
mirante4d-settings = { path = "crates/mirante4d-settings" }

[patch.crates-io]
wayland-scanner = { path = "vendor/wayland-scanner" }
