[package]
name = "mirante4d-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mirante4d-app = { path = "../crates/mirante4d-app" }
mirante4d-format = { path = "../crates/mirante4d-format" }
serde_json = "1.0"

[[bin]]
name = "manifest_parser"
path = "fuzz_targets/manifest_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "project_metadata_parser"
path = "fuzz_targets/project_metadata_parser.rs"
test = false
doc = false
bench = false
