[package]
name = "mirante4d-analysis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
glam.workspace = true
mirante4d-core.workspace = true
mirante4d-data.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
mirante4d-format.workspace = true
tempfile.workspace = true
