[package]
name = "mirante4d-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
glam.workspace = true
mirante4d-analysis.workspace = true
mirante4d-application.workspace = true
mirante4d-data.workspace = true
mirante4d-dataset.workspace = true
mirante4d-domain.workspace = true
mirante4d-format.workspace = true
mirante4d-identity.workspace = true
mirante4d-import.workspace = true
mirante4d-project-model.workspace = true
mirante4d-render-api.workspace = true
mirante4d-renderer.workspace = true
mirante4d-settings.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
winit.workspace = true

[dev-dependencies]
egui_kittest = { workspace = true, features = ["eframe", "snapshot", "wgpu"] }
insta.workspace = true
tempfile.workspace = true
tiff.workspace = true
