[package]
name = "mirante4d-application"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mirante4d-dataset.workspace = true
mirante4d-domain.workspace = true
mirante4d-identity.workspace = true
mirante4d-project-model.workspace = true
mirante4d-project-store.workspace = true
mirante4d-render-api.workspace = true
mirante4d-settings.workspace = true
