[package]
name = "mirante4d-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
glam.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
proptest.workspace = true
serde_json.workspace = true

[[bench]]
name = "core_primitives"
harness = false
