[package]
name = "mirante4d-data"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
glam.workspace = true
mirante4d-domain.workspace = true
mirante4d-dataset.workspace = true
mirante4d-format.workspace = true
mirante4d-identity.workspace = true
thiserror.workspace = true
tracing.workspace = true
zarrs.workspace = true

[dev-dependencies]
tempfile.workspace = true
