[package]
name = "mirante4d-dataset-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mirante4d-dataset.workspace = true
thiserror.workspace = true

[dev-dependencies]
mirante4d-domain.workspace = true
mirante4d-identity.workspace = true
