[package]
name = "mirante4d-format"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
mirante4d-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zarrs.workspace = true

[dev-dependencies]
tempfile.workspace = true
