[package]
name = "mirante4d-identity"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mirante4d-domain.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
proptest.workspace = true
