[package]
name = "mirante4d-import-pipeline"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mirante4d-dataset.workspace = true
mirante4d-domain.workspace = true
mirante4d-identity.workspace = true
mirante4d-storage.workspace = true
quick-xml.workspace = true
rustix.workspace = true
thiserror.workspace = true
tiff.workspace = true

[dev-dependencies]
tempfile.workspace = true
