[package]
name = "mirante4d-import"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
mirante4d-core.workspace = true
mirante4d-format.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
tiff.workspace = true

[dev-dependencies]
mirante4d-data.workspace = true
tempfile.workspace = true
