[package]
name = "mirante4d-project-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mirante4d-domain.workspace = true
mirante4d-identity.workspace = true
mirante4d-project-model.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
