[package]
name = "mirante4d-render-reference"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
mirante4d-dataset.workspace = true
mirante4d-domain.workspace = true
mirante4d-render-api.workspace = true
thiserror.workspace = true
