[package]
name = "mirante4d-render-wgpu"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
mirante4d-dataset.workspace = true
mirante4d-render-api.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
mirante4d-dataset-runtime.workspace = true
mirante4d-domain.workspace = true
mirante4d-render-reference.workspace = true
pollster.workspace = true
