[package]
name = "mirante4d-renderer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck.workspace = true
glam.workspace = true
mirante4d-data.workspace = true
mirante4d-domain.workspace = true
mirante4d-format.workspace = true
mirante4d-render-api.workspace = true
pollster.workspace = true
thiserror.workspace = true
wgpu.workspace = true

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true
