[package]
name = "mirante4d-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crc32c.workspace = true
mirante4d-dataset.workspace = true
mirante4d-domain.workspace = true
mirante4d-identity.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zarrs_metadata.workspace = true
zstd.workspace = true
