[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
glam.workspace = true
mirante4d-analysis.workspace = true
mirante4d-data.workspace = true
mirante4d-dataset.workspace = true
mirante4d-dataset-runtime.workspace = true
mirante4d-domain.workspace = true
mirante4d-format.workspace = true
mirante4d-import.workspace = true
mirante4d-renderer.workspace = true
mirante4d-render-api.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
tiff.workspace = true
toml.workspace = true
yaml-rust2.workspace = true

[dev-dependencies]
tempfile.workspace = true
