[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
mirante4d-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
tiff.workspace = true
toml.workspace = true
yaml-rust2.workspace = true

[dev-dependencies]
tempfile.workspace = true
